# greentic-operator

./: .gitignore  Cargo.toml  GitVersion.yml  README.md  SECURITY_FIX_REPORT.md  pr-comment.md  provider-registry.local.json
.codex/: PR-00-AUDIT.md  PR-01-runtime-core-and-provider-seams.md  PR-02-squashfs-access-mounted-preferred-userspace-fallback.md  PR-03-bundle-lifecycle-and-pack-wiring.md  PR-04-session-and-state-provider-contract-integration.md  PR-05-telemetry-and-observer-hook-integration.md  PR-06-admin-api-and-control-plane-hooks.md  PR-07-safe-mode-degraded-mode-and-provider-health.md  PR-08-trust-warm-gates-and-runtime-compatibility.md  PR-09-distroless-and-target-runtime-packaging.md  PR-OP-01-static.md  PR-OP-03-remove-demo-dev-mode.md  PR-X-00-audit.md  PR-X-01-minimal-generic-gap-fix.md  repo_overview.md
.codex/done/: PR-OP-01-wizard-provider-operator-lifecycle.md  PR-OP-02-wizard-operator.md  PR-OP-03-remove-demo-dev-mode.md  PR-OP-04-hooks-subs.md  PR-OP-05-stage1_audit.md  PR-OP-06-stage2_surgical_update.md
.github/: renovate.json
.github/workflows/: dependabot-automerge.yml  dev-publish.yml  publish-dev-codeartifact.yml  publish.yml  release-prepare.yml  renovate.yml
ci/: cargo-config-dev.toml  deps-dev.toml  package_binstall.sh
crates/greentic-secrets-repro/: Cargo.toml
docs/: OPERATOR_MESSAGING_PROVIDER_INTEGRATION_GUIDE.md  creating-bundles-from-oci-for-codex.md  creating-bundles-from-oci-for-humans.md  demo-run.md  release_checklist.md  secrets.md  wizard.md
docs/domains/: common.md
i18n/operator_cli/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
src/: admin_api.rs  bundle_access.rs  bundle_lifecycle.rs  capabilities.rs  capability_bootstrap.rs  cards.rs  cli.rs  component_qa_ops.rs  control_plane.rs  discovery.rs  doctor.rs  lib.rs  main.rs  ngrok.rs  operator_log.rs  provider_registry.rs  providers.rs  qa_flow_handler.rs  qa_persist.rs  qa_setup_wizard.rs  runner_exec.rs  runtime_core.rs  secrets_gate.rs  secrets_manager.rs  start_delegate.rs  state_layout.rs  static_routes.rs  wizard.rs  wizard_spec_builder.rs
src/demo/: commands.rs  doctor.rs  event_router.rs  github_mcp.rs  help.rs  http_ingress.rs  ingress_dispatch.rs  mod.rs  qa_bridge.rs  repl.rs  runner.rs  runner_host.rs  runtime.rs  setup.rs  timer_scheduler.rs
src/demo/card/: parse.rs
src/domains/: mod.rs
src/hooks/: runner.rs
src/messaging_universal/: app.rs  dto.rs  egress.rs  ingress.rs  provider.rs  tests.rs
src/offers/: mod.rs  registry.rs
src/onboard/: api.rs  mod.rs  provider_i18n.rs  providers.rs  webhook_setup.rs  wizard.rs
src/subscriptions_universal/: demo.rs
tests/: demo_events_up.rs  demo_runner.rs  demo_setup_all_providers.rs  demo_up_smoke.rs  discovery.rs  domains.rs  qa_e2e.rs  wizard_paths.rs
tests/fixtures/: provider-registry.local.json
tools/: i18n.sh
