[package]
name = "greentic-operator"
version = "0.4.32"
edition = "2024"
rust-version = "1.91"
description = "Greentic operator CLI for local dev and demo orchestration."
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-operator"
homepage = "https://github.com/greentic-ai/greentic-operator"
readme = "README.md"
autobins = false
include = [
    "src/**",
    "i18n/operator_cli/*.json",
    "i18n/operator_wizard/*.json",
    "README.md",
    "Cargo.toml",
    "Cargo.lock",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }.{ archive-format }"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
bin = ["greentic-operator"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "greentic-operator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_bw = {package="serde_yaml_gtc", version="2.5.2"}
serde_cbor = "0.11"
libc = "0.2"
zip = "8"
chrono = "0.4"
sysinfo = "0.38"
directories-next = "2"
greentic-runner-desktop = { version = "0.4" }
greentic-runner-host = { version = "0.4" }
greentic-interfaces = { version = "0.4" }
greentic-interfaces-guest = { version = "0.4" }
greentic-interfaces-host = { version = "0.4" }
greentic-interfaces-wasmtime = { version = "0.4" }
greentic-qa-lib = "0.4"
greentic-i18n = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "signal", "net"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = "0.1"
ureq = { version = "3", features = ["json"] }
greentic-types = { version="0.4", features = ["serde"] }
rpassword = "7"
greentic-secrets-lib = { version = "0.4", features = ["providers-dev"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.10"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonschema = "0.42"
greentic-distributor-client = { version = "0.4", default-features = false, features = ["pack-fetch"] }
oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"] }
include_dir = "0.7"
once_cell = "1.21"
sys-locale = "0.3"
unic-langid = "0.9"
qa-spec = "0.4"

[dev-dependencies]
tempfile = "3.10"
indexmap = "2"
semver = "1"

[patch.crates-io]
greentic-runner-host = { path = "../greentic-runner/crates/greentic-runner-host" }
greentic-runner-desktop = { path = "../greentic-runner/crates/greentic-runner-desktop" }
qa-spec = { path = "../greentic-qa/crates/qa-spec" }

[workspace]
members = [
    "secret_name",
    "crates/greentic-secrets-repro",
]

