[package]
name = "greentic-operator"
version = "0.4.36"
edition = "2024"
rust-version = "1.91"
description = "Greentic operator CLI for local dev and demo orchestration."
license = "MIT"
repository = "https://github.com/greenticai/greentic-operator"
homepage = "https://github.com/greenticai/greentic-operator"
readme = "README.md"
autobins = false
include = [
    "src/**",
    "i18n/operator_cli/*.json",
    "i18n/operator_wizard/*.json",
    "README.md",
    "Cargo.toml",
    "Cargo.lock",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }.{ archive-format }"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
bin = ["greentic-operator"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-fmt = "tgz"

[[bin]]
name = "greentic-operator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
directories-next = "2"
greentic-distributor-client = { version = "0.4", default-features = false, features = ["pack-fetch"] }
greentic-i18n = "0.4"
greentic-interfaces = { version = "0.4" }
greentic-interfaces-guest = { version = "0.4" }
greentic-interfaces-host = { version = "0.4" }
greentic-interfaces-wasmtime = { version = "0.4" }
greentic-qa-lib = "0.4"
greentic-runner-desktop = { version = "0.4" }
greentic-runner-host = { version = "0.4" }
greentic-secrets-lib = { version = "0.4", features = ["providers-dev"] }
greentic-types = { version = "0.4", features = ["serde"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1"
include_dir = "0.7"
jsonschema = "0.44"
libc = "0.2"
oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"] }
once_cell = "1.21"
qa-spec = "0.4"
rand = "0.10"
rpassword = "7"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
serde_yaml_bw = { package = "serde_yaml_gtc", version = "2.5.2" }
sys-locale = "0.3"
sysinfo = "0.38"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ureq = { version = "3", features = ["json"] }
unic-langid = "0.9"
uuid = { version = "1", features = ["v4"] }
zip = "8"

[dev-dependencies]
indexmap = "2"
tempfile = "3.10"

[workspace.dependencies]
anyhow = "1.0"
tempfile = "3.10"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = "0.3"
greentic-secrets-lib = { version = "0.4", features = ["providers-dev"] }
uuid = { version = "1", features = ["v4"] }

[workspace]
members = [
    "secret_name",
    "crates/greentic-secrets-repro",
]

[patch.crates-io]
greentic-interfaces = { path = "vendor/patches/greentic-interfaces" }
greentic-interfaces-guest = { path = "vendor/patches/greentic-interfaces-guest" }
greentic-interfaces-host = { path = "vendor/patches/greentic-interfaces-host" }
greentic-interfaces-wasmtime = { path = "vendor/patches/greentic-interfaces-wasmtime" }
