[package]
name = "greentic-secrets-repro"
version = "0.1.0"
edition = "2021"
description = "Minimal repro crate for greentic dev secrets roundtrips."
license = "MIT"

[dependencies]
anyhow.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
greentic-secrets-lib.workspace = true
uuid.workspace = true
